// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should match snapshot hidden 1`] = `
<DocumentFragment>
  

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.75rem;
  padding-right: 0.5rem;
  color: var(--admin-ui-foreground-action-main-solid);
  background-color: var(--admin-ui-background-action-main-solid);
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-3:hover {
  background-color: var(--admin-ui-background-action-main-solidHover);
}

.emotion-3:active {
  background-color: var(--admin-ui-background-action-main-solidPressed);
}

.emotion-3:disabled {
  background-color: var(--admin-ui-background-action-main-solidDisabled);
  color: var(--admin-ui-foreground-action-main-solidDisabled);
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-13 {
  border: 0;
  outline: none;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: coral;
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: var(--admin-ui-borderColor-popover);
  box-shadow: popover;
}

.emotion-5 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: var(--admin-ui-background-listBoxItem-main);
  color: var(--admin-ui-foreground-listBoxItem-main);
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-5:hover {
  color: var(--admin-ui-foreground-listBoxItem-mainHover);
  background-color: var(--admin-ui-background-listBoxItem-mainHover);
}

.emotion-5:active {
  color: var(--admin-ui-foreground-listBoxItem-mainPressed);
  background-color: var(--admin-ui-background-listBoxItem-mainPressed);
}

.emotion-5:disabled {
  color: listBoxItem.mainDisabled;
  background-color: listBoxItem.mainDisabled;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: var(--admin-ui-borderColor-base);
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

<div
    class="emotion-14"
  >
    <button
      aria-controls="id"
      aria-expanded="false"
      aria-haspopup="menu"
      class="emotion-3"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 14L12 10L8 14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
           Open
        </div>
      </div>
    </button>
    <div
      aria-label="menu label"
      aria-orientation="vertical"
      class="emotion-13"
      data-dialog="true"
      data-testid="menu"
      hidden=""
      id="id"
      role="menu"
      style="display: none;"
      tabindex="-1"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        class="emotion-10"
        role="separator"
      />
      <button
        class="emotion-5"
        id="id-4"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Menu should match snapshot visible 1`] = `
<DocumentFragment>
  

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  font-size: 0.875rem;
  height: 40px;
  width: auto;
  padding-left: 0.75rem;
  padding-right: 0.5rem;
  color: var(--admin-ui-foreground-action-main-solid);
  background-color: var(--admin-ui-background-action-main-solid);
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-3:hover {
  background-color: var(--admin-ui-background-action-main-solidHover);
}

.emotion-3:active {
  background-color: var(--admin-ui-background-action-main-solidPressed);
}

.emotion-3:disabled {
  background-color: var(--admin-ui-background-action-main-solidDisabled);
  color: var(--admin-ui-foreground-action-main-solidDisabled);
}

.emotion-3 svg {
  width: 24px;
  height: 24px;
  min-width: 24px;
  min-height: 24px;
  margin: 0.25rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  margin: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  visibility: visible;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
}

.emotion-0 {
  min-width: 24px;
  min-height: 24px;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -moz-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.emotion-5 {
  margin-top: 0.125rem;
  margin-bottom: 0.125rem;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  font-size: 0.875rem;
  border: none;
  text-transform: initial;
  width: 100%;
  height: 32px;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 500;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  background-color: var(--admin-ui-background-listBoxItem-main);
  color: var(--admin-ui-foreground-listBoxItem-main);
}

.emotion-5 div {
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-5 svg {
  margin: 0.25rem;
  width: 20px;
  height: 20px;
  min-width: 20px;
  min-height: 20px;
  margin-left: 0rem;
  margin-right: 0.5rem;
}

.emotion-5:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-5:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem hsla(222, 64%, 84%, 1);
}

.emotion-5:hover {
  color: var(--admin-ui-foreground-listBoxItem-mainHover);
  background-color: var(--admin-ui-background-listBoxItem-mainHover);
}

.emotion-5:active {
  color: var(--admin-ui-foreground-listBoxItem-mainPressed);
  background-color: var(--admin-ui-background-listBoxItem-mainPressed);
}

.emotion-5:disabled {
  color: listBoxItem.mainDisabled;
  background-color: listBoxItem.mainDisabled;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  border-style: solid;
  border-bottom-width: 1px;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: var(--admin-ui-borderColor-base);
  width: calc(100% -0.75rem);
  margin-left: -0.75rem;
  margin-right: -0.75rem;
  outline: none;
}

.emotion-13 {
  border: 0;
  outline: none;
  z-index: 999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  background-color: var(--admin-ui-background-popover);
  padding: 0.75rem;
  min-width: 18px;
  border-radius: 3px;
  border-width: 1px;
  border-style: solid;
  border-color: var(--admin-ui-borderColor-popover);
  box-shadow: popover;
}

<div
    class="emotion-14"
  >
    <button
      aria-controls="id"
      aria-expanded="true"
      aria-haspopup="menu"
      class="emotion-3"
      type="button"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-1"
        >
          <svg
            class="emotion-0"
            fill="none"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 14L12 10L8 14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="1.5"
            />
          </svg>
           Open
        </div>
      </div>
    </button>
    <div
      aria-label="menu label"
      aria-orientation="vertical"
      class="emotion-13"
      data-dialog="true"
      data-testid="menu"
      id="id"
      role="menu"
      tabindex="-1"
    >
      <button
        class="emotion-5"
        id="id-1"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Download
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-2"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Link to
        </div>
      </button>
      <button
        class="emotion-5"
        id="id-3"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Favorite
        </div>
      </button>
      <hr
        aria-orientation="horizontal"
        class="emotion-10"
        role="separator"
      />
      <button
        class="emotion-5"
        id="id-4"
        role="menuitem"
        tabindex="0"
        type="button"
      >
        <div
          class="emotion-4"
        >
           Delete
        </div>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
